进一步完善了首页

--- a/LYY_SnacksWeb/Views/Shared/_Layout.cshtml
+++ b/LYY_SnacksWeb/Views/Shared/_Layout.cshtml
@@ -23,6 +23,21 @@
                 @Html.ActionLink("请登录", "Login", new { area = "" }, new { @class = "navbar-brand" })
                 @Html.ActionLink("注册", "Create", new { area = "" }, new { @class = "navbar-brand" })
             </div>
+
+            @*<style>
+                .dropdown a{
+                    list-style:none;
+                    float:left;
+                    display:inline;
+                    text-align:center;
+                }
+                .dropdown-menu li a:hover{
+                    background:#666;
+                    border-bottom:1px dashed #FF0000;
+
+                }
+            </style>*@
+
             <div class="navbar-collapse collapse">
                 <ul class="nav nav-pills">
                     <li class="dropdown">
