--- a/LYY_SnacksWeb/Views/Snacks_/Index.cshtml
+++ b/LYY_SnacksWeb/Views/Snacks_/Index.cshtml
@@ -393,6 +393,13 @@
                text-align:center;
                background:#5bc0de;
            }
+           ul.r_b li{
+               list-style:none;
+               text-align:left;                                    ;
+           }
+           ul.r_b span{
+               text-align:left;
+           }
        </style>
 
        @*网站公告*@
@@ -425,7 +432,6 @@
                <h4><span class="r" data-id="1" >公告</a> </span><span class="r" data-id="2">关注</span></h4>
                <ul class="r_b" id="r1">
                    <li><span>[关注]</span><a href="">纵享丝滑德芙巧克力</a></li>
-
                    <li><span>[上新]</span><a href="">万圣节创意手工糖果水果切片糖棒棒喜糖</a></li>
                    <li><span>[必看]</span><a href="">直播热火播主</a></li>
 
@@ -448,7 +454,7 @@
       
         <style>
             .LB1 img {
-                margin-top:50px;
+                margin-top:40px;
                 width: 1140px;
                 height: 200px;
             }
@@ -469,6 +475,7 @@
 
         <style>
             .ct3 {
+                margin-top:40px;
                 font-size: large;
             }
 
@@ -579,6 +586,7 @@
 
         <style>
             .LB img {
+                margin-top:40px;
                 width: 1140px;
                 height: 150px;
             }
@@ -594,6 +602,7 @@
 
         <style>
             .ct4 {
+                margin-top:40px;
                 float: right;
                 margin-left: 50px;
                 list-style: none;
@@ -865,6 +874,7 @@
 
         <style>
             .LB img {
+                margin-top:40px;
                 width: 1140px;
                 height: 150px;
             }
@@ -880,6 +890,7 @@
 
         <style>
             .ct5 {
+                margin-top:40px;
                 font-size: large;
             }
 
