--- a/LYY_SnacksWeb/Views/Snacks_/Index.cshtml
+++ b/LYY_SnacksWeb/Views/Snacks_/Index.cshtml
@@ -25,21 +25,13 @@
             margin-bottom: 20px;
         }
 
-        .logo p {
-            font-family: Arial;
-            float: left;
-            font-size: medium;
-            font-style: oblique;
-            margin-left: 50px;
-        }
-
         .u-g-search input {
-            line-height: 2;
+            line-height:2.5;       
             color: cornflowerblue;
             font-size: medium;
             float: left;
             margin-top: 40px;
-            margin-left: 250px;
+           margin-left:70px;
         }
 
         .u-g-search button {
@@ -47,15 +39,18 @@
             color: cornflowerblue;
             float: left;
             margin-top: 45px;
-            margin-left: 20px;
+            margin-left: 30px;
         }
 
-        .u-g-search ul {
-            float: left;
-            margin-top: 20px;
-            margin-top: 10px;
-            margin-left: 250px;
+        .rmss a{
+            list-style:none;
+            float:left;
+            margin-top:60px;
+            margin-left:70px;
+            text-decoration-color:red;
+            text-align:center;
         }
+      
     </style>
 
     @*logo,搜索框,热搜*@
@@ -77,7 +72,7 @@
 
                 <a href="">辣条</a>
 
-                <a href="">薯片</a>
+               <a href="">薯片</a>
 
                 <a href="">糖果</a>
 
@@ -246,9 +241,9 @@
                    <ul class="dropdown-menu">
                        <li><a href="#"  >国内零食</a></li>
                        <li><a href="#" >进口零食</a></li>
-                       <li><a href="#" class="btn btn-default btn-primary">定制零食</a></li>
-                       <li><a href="#" class="btn btn-default btn-primary">特产零食</a></li>
-                       <li><a href="#" class="btn btn-default btn-primary">网红零食</a></li>
+                       <li><a href="#" >定制零食</a></li>
+                       <li><a href="#" >特产零食</a></li>
+                       <li><a href="#" >网红零食</a></li>
                    </ul>
                </li>
 
@@ -395,7 +390,7 @@
            }
            ul.r_b li{
                list-style:none;
-               text-align:left;                                    ;
+               text-align:left;                                 
            }
            ul.r_b span{
                text-align:left;
@@ -429,7 +424,7 @@
         });
     });
                </script>
-               <h4><span class="r" data-id="1" >公告</a> </span><span class="r" data-id="2">关注</span></h4>
+               <h4><span class="r" data-id="1" >公告 </span><span class="r" data-id="2">关注</span></h4>
                <ul class="r_b" id="r1">
                    <li><span>[关注]</span><a href="">纵享丝滑德芙巧克力</a></li>
                    <li><span>[上新]</span><a href="">万圣节创意手工糖果水果切片糖棒棒喜糖</a></li>
