--- a/LYY_SnacksWeb/Views/Snacks_/Index.cshtml
+++ b/LYY_SnacksWeb/Views/Snacks_/Index.cshtml
@@ -41,12 +41,14 @@
             margin-top: 45px;
             margin-left: 30px;
         }
-
+        .rmss ul{
+            margin-left:60px;
+        }
         .rmss a{
             list-style:none;
-            float:left;
+            float:left;   
             margin-top:60px;
-            margin-left:70px;
+            margin-left:15px;
             text-decoration-color:red;
             text-align:center;
         }
